force-app/main/default/objects/AIPiiDataMaskingRule__mdt/AIPiiDataMaskingRule__mdt.object-meta.xml
<CustomObject>
    <description>Defines how to generate a fake value for real PII data of a given AI PII Field Type - either by substituting the whole value from a comma-separated list of dummy values, or by randomizing characters that match a regex pattern. Linked from AI PII Field Type via a required one-to-one lookup (every Field Type must have exactly one Masking Rule). Currently read only by AIPiiPseudonymizationService, which only ever uses the SubstituteFromList strategy - a pseudonymized value must always be fully reversible back to the real one, and RandomizeByPattern can&apos;t guarantee that. The RandomizeByPattern strategy (and Redact__c/ReplacementPattern__c/ReplacementCharacterCount__c) is reserved for a future one-way data-scrambling consumer that doesn&apos;t need reversibility.</description>
    <label>AI PII Data Masking Rule</label>
    <pluralLabel>AI PII Data Masking Rules</pluralLabel>
</CustomObject>