force-app/main/default/objects/AIPiiDataMaskingRule__mdt/fields/Redact__c.field-meta.xml
<CustomField>
    <fullName>Redact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Only used when Strategy__c is RandomizeByPattern. When checked, every character matching ReplacementPattern__c is randomized. When unchecked, only ReplacementCharacterCount__c of the matching characters (counting from the end of the value) are randomized, leaving the rest of the real value untouched.</description>
    <inlineHelpText>Check to randomize every matching character. Leave unchecked to randomize only the last ReplacementCharacterCount__c matching characters. Only applies when Strategy is Randomize By Pattern.</inlineHelpText>
    <label>Redact</label>
    <type>Checkbox</type>
</CustomField>