force-app/main/default/objects/AIPiiDataMaskingRule__mdt/fields/ReplacementCharacterCount__c.field-meta.xml
<CustomField>
    <fullName>ReplacementCharacterCount__c</fullName>
    <description>Only used when Strategy__c is RandomizeByPattern and Redact__c is unchecked. Number of characters matched by ReplacementPattern__c, counting from the end of the value, to randomize - e.g. 4 to scramble only the last 4 digits of a card number and leave the rest as real digits.</description>
    <inlineHelpText>Number of matching characters (from the end of the value) to randomize. Only applies when Strategy is Randomize By Pattern and Redact is unchecked.</inlineHelpText>
    <label>Replacement Character Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>