force-app/main/default/objects/AIPiiDataMaskingRule__mdt/fields/ReplacementPattern__c.field-meta.xml
<CustomField>
    <fullName>ReplacementPattern__c</fullName>
    <description>Only used when Strategy__c is RandomizeByPattern. Regex pattern identifying which characters in the real value are eligible to be randomized, e.g. &quot;\d&quot; to randomize digits.</description>
    <inlineHelpText>Regex pattern of characters eligible for randomization, e.g. &quot;\d&quot; for digits. Only applies when Strategy is Randomize By Pattern.</inlineHelpText>
    <label>Replacement Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>