force-app/main/default/objects/AIPiiDataMaskingRule__mdt/fields/Strategy__c.field-meta.xml
<CustomField>
    <fullName>Strategy__c</fullName>
    <description>Which set of fields on this record is actually used to scramble data. RandomizeByPattern uses ReplacementPattern__c, Redact__c and ReplacementCharacterCount__c. SubstituteFromList uses SubstituteValues__c.</description>
    <inlineHelpText>RandomizeByPattern: replace characters matching a regex pattern with random characters of the same type (digit/letter). SubstituteFromList: replace the whole value with a random pick from a comma-separated list of dummy data.</inlineHelpText>
    <label>Strategy</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RandomizeByPattern</fullName>
                <default>true</default>
                <label>Randomize By Pattern</label>
            </value>
            <value>
                <fullName>SubstituteFromList</fullName>
                <label>Substitute From List</label>
            </value>
            <value>
                <fullName>PatternReplace</fullName>
                <isActive>false</isActive>
                <label>PatternReplace</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>