force-app/main/default/objects/AIPiiDataMaskingRule__mdt/fields/SubstituteValues__c.field-meta.xml
<CustomField>
    <fullName>SubstituteValues__c</fullName>
    <description>Only used when Strategy__c is SubstituteFromList. Comma-separated list of realistic dummy values to substitute in place of the real one, e.g. a list of fake first names.</description>
    <inlineHelpText>Comma-separated dummy values to pick from at random, e.g. &quot;Alex,Jordan,Sam,Taylor&quot;. Only applies when Strategy is Substitute From List.</inlineHelpText>
    <label>Substitute Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>