force-app/main/default/objects/AIPiiDataMaskingRule__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Active__c</columns>
    <columns>Strategy__c</columns>
    <columns>ReplacementPattern__c</columns>
    <columns>ReplacementCharacterCount__c</columns>
    <columns>SubstituteValues__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>